# starmix

./: CMakeLists.txt  README.md
lemon_spear/: CMakeLists.txt  complete_score_pdb.cpp  idatm_idatm.cpp  idatm_protein_name.cpp
spear/: CMakeLists.txt  filter_carboxylic_acids.cpp  score_all_residues.cpp  score_poses.cpp  score_poses_vina.cpp
